--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --baseHref='https://anjum121.github.io/zoomIn/'",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
+    
   },
   "private": true,
   "dependencies": {
